# fastvoicechat

./: .env_sample  .gitignore  README.md  main.py  main_async.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml  python-check.yaml
docs/source/: conf.py  fastvoicechat.llm.rst  fastvoicechat.rst  fastvoicechat.stt.capture.rst  fastvoicechat.stt.recognition.rst  fastvoicechat.stt.rst  fastvoicechat.stt.vad.rst  fastvoicechat.tts.players.rst  fastvoicechat.tts.rst  fastvoicechat.tts.synthesizers.rst  index.rst  modules.rst
localdata/: README.md
rules/: 00_basics.md  coding.md  directory_patterns.md  git_pr_workflow.md  merge.py  sphinx_setup.md  tdd.md
src/fastchat/: __init__.py  fastchat.py
src/fastchat/thread/: llm.py  tts.py
src/fastvoicechat/: __init__.py  asyncfastvoicechat.py  base.py  factory.py  fastvoicechat.py  fvchat.py  voicevox.py
src/fastvoicechat/asynclib/: base.py  llm.py  stt.py  tts.py
src/fastvoicechat/llm/: __init__.py  llm.py
src/fastvoicechat/stt/: __init__.py  base.py  stt.py
src/fastvoicechat/stt/capture/: __init__.py  base.py  pyaudiocapture.py
src/fastvoicechat/stt/recognition/: __init__.py  base.py  googlespeechrecognition.py  voskrecognition.py
src/fastvoicechat/stt/vad/: __init__.py  base.py  webrtcvadvad.py
src/fastvoicechat/thread/: base.py  llm.py  stt.py  tts.py
src/fastvoicechat/tts/: __init__.py  base.py  tts.py
src/fastvoicechat/tts/players/: __init__.py  base.py  pyaudioplayer.py  simpleaudioplayer.py  sounddeviceplayer.py  tcpipplayer.py
src/fastvoicechat/tts/synthesizers/: __init__.py  base.py  pyopenjtalksynthesizer.py  voicevoxsynthesizer.py
tests/: test_factory.py
tests/tts/players/: test_pyaudioplayer.py  test_simpleaudioplayer.py  test_sounddeviceplayer.py  test_tcpipplayer.py
