[project]
name = "fastvoicechat"
dynamic = ["version"]
description = "高速音声対話のデモプログラム"
readme = "README.md"
authors = [
    { name = "shimajiroxyz" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "google-cloud-speech>=2.31.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pyaudio>=0.2.14",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "simpleaudio>=1.0.4",
    "webrtcvad>=2.0.10",
    "scipy>=1.15.2",
    "pyopenjtalk-plus>=0.3.4.post11",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "autodoc-pydantic>=2.2.0",
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/jiroshimaya/fastvoicechat" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
# pytestのwarningを消すための対応
asyncio_default_fixture_loop_scope = "function"  # または "class", "module", "package", "session" のいずれか

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "sounddevice>=0.5.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "taskipy>=1.14.1",
    "types-requests>=2.32.0.20250306",
]

[tool.taskipy.tasks]
test-workflow-py = "pytest -m 'workflow' --override-ini=addopts="
test-workflow = "bats tests/workflow/test_workflow.bats"
act-sample = "act -j publish -W .github/workflows/publish-to-testpypi.yaml -e tests/workflow/event.json"
test = "pytest"
lint = "uvx ruff check ."
format = "uvx ruff format ."
docs-generate = "sphinx-apidoc -f -o docs/source src/fastvoicechat && sphinx-build -M clean docs/source docs/build && sphinx-build -b html docs/source docs/build"
docs-open = "open docs/build/html/index.html"

[tool.mypy]
# スタブが無いパッケージのエラーは無視させる.サードパーティのライブラリに型情報がないケースもあるため
ignore_missing_imports = true
